@@ -226,6 +226,8 @@
    - stevesk@cvs.openbsd.org 2002/01/22 02:52:41
      [servconf.c]
      typo in error message; from djast@cs.toronto.edu
+ - (djm) Make auth2-pam.c compile again after dispatch.h and packet.h 
+   changes
 
 20020121
  - (djm) Rework ssh-rand-helper:
@@ -7373,4 +7375,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1786 2002/01/22 12:35:09 djm Exp $
+$Id: ChangeLog,v 1.1787 2002/01/22 12:43:12 djm Exp $
